<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegistrationActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtPseudoRegistration"
        android:hint="@string/edtPseudoRegistration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtMailRegistration"
        android:hint="@string/edtMailRegistration"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/edtPseudoRegistration"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtPsswdRegistration"
        android:hint="@string/edtPsswdRegistration"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edtMailRegistration"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtConfirmPsswdRegistration"
        android:hint="@string/edtConfirmPsswdRegistration"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edtPsswdRegistration"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bttCancelRegistration"
        android:text="@string/bttCancelRegistration"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmPsswdRegistration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bttValidateRegistration"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bttValidateRegistration"
        android:text="@string/bttValidateRegistration"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmPsswdRegistration"
        app:layout_constraintLeft_toRightOf="@id/bttCancelRegistration"
        app:layout_constraintRight_toRightOf="parent"
        />
</android.support.constraint.ConstraintLayout>